--- a/src/app.css
+++ b/src/app.css
@@ -52,11 +52,10 @@
 	-o-animation: spinner 150ms infinite linear;
 	animation: spinner 150ms infinite linear;
 	border-radius: 0.5em;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.8) 1.5em 0 0 0,
-		rgba(0, 0, 0, 0.8) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.8) 0 1.5em 0 0,
-		rgba(0, 0, 0, 0.8) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.8) -1.5em 0 0 0,
-		rgba(0, 0, 0, 0.8) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.8) 0 -1.5em 0 0,
-		rgba(0, 0, 0, 0.8) 1.1em -1.1em 0 0;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.8) 1.5em 0 0 0, rgba(0, 0, 0, 0.8) 1.1em 1.1em 0 0,
+		rgba(0, 0, 0, 0.8) 0 1.5em 0 0, rgba(0, 0, 0, 0.8) -1.1em 1.1em 0 0,
+		rgba(0, 0, 0, 0.8) -1.5em 0 0 0, rgba(0, 0, 0, 0.8) -1.1em -1.1em 0 0,
+		rgba(0, 0, 0, 0.8) 0 -1.5em 0 0, rgba(0, 0, 0, 0.8) 1.1em -1.1em 0 0;
 	box-shadow: rgba(0, 0, 0, 0.8) 1.5em 0 0 0, rgba(0, 0, 0, 0.8) 1.1em 1.1em 0 0,
 		rgba(0, 0, 0, 0.8) 0 1.5em 0 0, rgba(0, 0, 0, 0.8) -1.1em 1.1em 0 0,
 		rgba(0, 0, 0, 0.8) -1.5em 0 0 0, rgba(0, 0, 0, 0.8) -1.1em -1.1em 0 0,
@@ -128,4 +127,37 @@
 		-o-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
+}
+
+/* scrollbar  */
+/* width */
+::-webkit-scrollbar {
+	width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey;
+	border-radius: 10px;
+	margin: 100px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: red;
+	border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #b30000;
+}
+
+.scrollbar-hide {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+	width: 0;
+	height: 0;
 }
